name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         Task 3 for FP ITMO course

homepage:            https://github.com/Alex-Andrv/fp-homework/tree/master/hw3#readme
license:             MIT
license-file:        LICENSE
author:              Alex
maintainer:          sesh_1.0@niuitmo.ru
copyright:           2021 Alex

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       HW3.Action
                       HW3.Base
                       HW3.Evaluator
                       HW3.Parser
                       HW3.Pretty
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                       , bits
    		           , bytestring
                       , containers
                       , directory
                       , megaparsec
                       , mtl
                       , parser-combinators
                       , prettyprinter
                       , prettyprinter-ansi-terminal
                       , random
                       , scientific
                       , serialise
                       , template-haskell
                       , text
                       , time
                       , transformers
                       , zlib
  default-language:    Haskell2010

executable hi
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , haskeline
                     , hw3
                     , mtl
  default-language:    Haskell2010

test-suite hw3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw3
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
